2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Concrete exposedfields need to implement
	openvrml::field_value::do_clone.

	* src/libopenvrml/openvrml/exposedfield.cpp
	* src/libopenvrml/openvrml/exposedfield.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-10-07 Braden McDaniel  <braden@endoframe.com>

	Applied (modified) patch from <sgrieve@users.sourceforge.net> to
	add double-precision field types and initial support for parsing
	VRML-encoded X3D.  In its current form, the X3D parser will
	always fail; correcting this depends on adding support for,
	at least, the nodes in X3D's Core profile.

	* java/Makefile.am
	* java/vrml/field/ConstMFDouble.java:  Added file.
	* java/vrml/field/ConstMFVec2d.java:  Added file.
	* java/vrml/field/ConstMFVec3d.java:  Added file.
	* java/vrml/field/ConstSFDouble.java:  Added file.
	* java/vrml/field/ConstSFVec2d.java:  Added file.
	* java/vrml/field/ConstSFVec3d.java:  Added file.
	* java/vrml/field/MFDouble.java:  Added file.
	* java/vrml/field/MFVec2d.java:  Added file.
	* java/vrml/field/MFVec3d.java:  Added file.
	* java/vrml/field/SFDouble.java:  Added file.
	* java/vrml/field/SFVec2d.java:  Added file.
	* java/vrml/field/SFVec3d.java:  Added file.
	* src/libopenvrml/Makefile.am
	* src/libopenvrml/openvrml/ScriptJDK.cpp:  Added Java bindings
	for SFDouble, MFDouble, SFVec2d, MFVec2d, SFVec3d, and MFVec3d.
	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g:  Modified
	Vrml97Parser.vrmlScene to take an openvrml::scene rather than an
	openvrml::browser.  Made Vrml97Scanner::identifyKeyword and
	Vrml97Scanner::identifyFieldType protected and virtual.  Added
	protected member function Vrml97Scanner::expectFieldType.
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/X3DVrmlParser.cpp:  Added file.
	* src/libopenvrml/openvrml/X3DVrmlParser.g:  Added file.
	* src/libopenvrml/openvrml/X3DVrmlParser.hpp:  Added file.